--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -15,6 +15,7 @@ div#container
    margin: 0 auto 0 auto;
    text-align: left;
 }
+
 body
 {
    background-color: #FFFFFF;
@@ -58,24 +59,57 @@ a:hover
 }
 #wb_Form1
 {
-   background-color: transparent;
-   background-image: none;
-   border: 0px #CCCCCC solid;
+  
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 300px;
+  height: 300px;
+  border: 7px double rgba(173,6,6,1);
+  font: normal 16px/1 "Times New Roman", Times, serif;
+  color: rgba(255,255,255,1);
+  text-align: center;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  background: url("http://enjoycss.com/bg-img/default/3_6.png");
+  background-position: 50% 50%;
+  -webkit-background-origin: padding-box;
+  background-origin: padding-box;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  -webkit-background-size: auto auto;
+  background-size: auto auto;
+  -webkit-box-shadow: 5px 5px 8px 2px rgba(255,0,0,0.4) ;
+  box-shadow: 5px 5px 8px 2px rgba(255,0,0,0.4) ;
+
 }
 #wb_Text1 
 {
-   background-color: transparent;
-   background-image: none;
-   border: 0px #000000 solid;
-   padding: 0;
-   margin: 0;
-   text-align: left;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 198px;
+  height: 100px;
+  border: 2px solid rgba(0,0,5,0.91);
+  font: normal 28px/1 "bangers", Helvetica, sans-serif;
+  color: rgba(0,0,0,1);
+  text-align: center;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  word-spacing: 1px;
+  background: rgba(255,255,255,1);
+  -webkit-box-shadow: 8px 6px 8px 2px rgba(255,0,63,1) ;
+  box-shadow: 8px 6px 8px 2px rgba(255,0,63,1) ;
+  -webkit-transform:    skewX(-20deg);
+  transform:    skewX(-20deg);
+text-align: left;
 }
 #wb_Text1 div
 {
    text-align: left;
    white-space: nowrap;
 }
+
 #Image1
 {
    border: 0px #000000 solid;
