--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -273,10 +273,10 @@ text-align: left;
 }
 #MegaMenu2 .ui-state-default
 {
-   display: inline-block;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
+   display: block;
+-webkit-box-sizing: content-box;
+-moz-box-sizing: content-box;
+box-sizing: content-box;
 float: none;
 z-index: auto;
 width: auto;
@@ -285,26 +285,24 @@ position: static;
 cursor: default;
 opacity: 1;
 margin: 0;
-padding: 10px;
+padding: 20px;
 overflow: visible;
 border: none;
 -webkit-border-radius: 0;
 border-radius: 0;
-font: normal 15px/normal "Warnes", Helvetica, sans-serif;
+font: normal 60px/1 "Monoton", Helvetica, sans-serif;
 color: rgba(255,255,255,1);
-text-decoration: normal;
 text-align: center;
--o-text-overflow: clip;
-text-overflow: clip;
-white-space: pre;
+-o-text-overflow: ellipsis;
+text-overflow: ellipsis;
 background: none;
 -webkit-box-shadow: none;
 box-shadow: none;
-text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de ;
--webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
--moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
--o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+text-shadow: 0 0 10px rgb(255,255,255) , 0 0 20px rgb(255,255,255) , 0 0 30px rgb(255,255,255) , 0 0 40px rgb(255,17,119) , 0 0 70px rgb(255,17,119) , 0 0 80px rgb(255,17,119) , 0 0 100px rgb(255,17,119) , 0 0 150px rgb(255,17,119) ;
+-webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
 -webkit-transform: none;
 transform: none;
 -webkit-transform-origin: 50% 50% 0;
@@ -312,37 +310,36 @@ transform-origin: 50% 50% 0;
 }
 #MegaMenu2 .ui-state-hover
 {
-   display: inline-block;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
+   display: block;
+-webkit-box-sizing: content-box;
+-moz-box-sizing: content-box;
+box-sizing: content-box;
 float: none;
 z-index: auto;
 width: auto;
 height: auto;
 position: static;
 cursor: default;
+opacity: 1;
 margin: 0;
-padding: 10px;
+padding: 20px;
 overflow: visible;
 border: none;
 -webkit-border-radius: 0;
 border-radius: 0;
-font: normal 17px/normal "Warnes", Helvetica, sans-serif;
+font: normal 60px/1 "Monoton", Helvetica, sans-serif;
 color: rgba(255,255,255,1);
-text-decoration: normal;
 text-align: center;
--o-text-overflow: clip;
-text-overflow: clip;
-white-space: pre;
+-o-text-overflow: ellipsis;
+text-overflow: ellipsis;
 background: none;
 -webkit-box-shadow: none;
 box-shadow: none;
-text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
--webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
--moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
--o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+text-shadow: 0 0 10px rgb(255,255,255) , 0 0 20px rgb(255,255,255) , 0 0 30px rgb(255,255,255) , 0 0 40px rgb(255,17,119) , 0 0 70px rgb(255,17,119) , 0 0 80px rgb(255,17,119) , 0 0 100px rgb(255,17,119) , 0 0 150px rgb(255,17,119) ;
+-webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
 -webkit-transform: none;
 transform: none;
 -webkit-transform-origin: 50% 50% 0;
@@ -357,12 +354,40 @@ transform-origin: 50% 50% 0;
 }
 #wb_Text2 
 {
-   background-color: transparent;
-   background-image: none;
-   border: 0px #000000 solid;
-   padding: 0;
-   margin: 0;
-   text-align: left;
+   display: block;
+-webkit-box-sizing: content-box;
+-moz-box-sizing: content-box;
+box-sizing: content-box;
+float: none;
+z-index: auto;
+width: auto;
+height: auto;
+position: static;
+cursor: default;
+opacity: 1;
+margin: 0;
+padding: 20px;
+overflow: visible;
+border: none;
+-webkit-border-radius: 0;
+border-radius: 0;
+font: normal 60px/1 "Monoton", Helvetica, sans-serif;
+color: rgba(255,255,255,1);
+text-align: center;
+-o-text-overflow: ellipsis;
+text-overflow: ellipsis;
+background: none;
+-webkit-box-shadow: none;
+box-shadow: none;
+text-shadow: 0 0 10px rgb(255,255,255) , 0 0 20px rgb(255,255,255) , 0 0 30px rgb(255,255,255) , 0 0 40px rgb(255,17,119) , 0 0 70px rgb(255,17,119) , 0 0 80px rgb(255,17,119) , 0 0 100px rgb(255,17,119) , 0 0 150px rgb(255,17,119) ;
+-webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+-webkit-transform: none;
+transform: none;
+-webkit-transform-origin: 50% 50% 0;
+transform-origin: 50% 50% 0;
 }
 #wb_Text2 div
 {
