--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -290,7 +290,7 @@ overflow: visible;
 border: none;
 -webkit-border-radius: 0;
 border-radius: 0;
-font: normal 60px/1 "Monoton", Helvetica, sans-serif;
+font: normal 18px/1 "Monoton", Helvetica, sans-serif;
 color: rgba(255,255,255,1);
 text-align: center;
 -o-text-overflow: ellipsis;
@@ -327,7 +327,7 @@ overflow: visible;
 border: none;
 -webkit-border-radius: 0;
 border-radius: 0;
-font: normal 60px/1 "Monoton", Helvetica, sans-serif;
+font: normal 25px/1 "Monoton", Helvetica, sans-serif;
 color: rgba(255,255,255,1);
 text-align: center;
 -o-text-overflow: ellipsis;
@@ -354,40 +354,12 @@ transform-origin: 50% 50% 0;
 }
 #wb_Text2 
 {
-   display: block;
--webkit-box-sizing: content-box;
--moz-box-sizing: content-box;
-box-sizing: content-box;
-float: none;
-z-index: auto;
-width: auto;
-height: auto;
-position: static;
-cursor: default;
-opacity: 1;
-margin: 0;
-padding: 20px;
-overflow: visible;
-border: none;
--webkit-border-radius: 0;
-border-radius: 0;
-font: normal 60px/1 "Monoton", Helvetica, sans-serif;
-color: rgba(255,255,255,1);
-text-align: center;
--o-text-overflow: ellipsis;
-text-overflow: ellipsis;
-background: none;
--webkit-box-shadow: none;
-box-shadow: none;
-text-shadow: 0 0 10px rgb(255,255,255) , 0 0 20px rgb(255,255,255) , 0 0 30px rgb(255,255,255) , 0 0 40px rgb(255,17,119) , 0 0 70px rgb(255,17,119) , 0 0 80px rgb(255,17,119) , 0 0 100px rgb(255,17,119) , 0 0 150px rgb(255,17,119) ;
--webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
--moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
--o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
--webkit-transform: none;
-transform: none;
--webkit-transform-origin: 50% 50% 0;
-transform-origin: 50% 50% 0;
+   background-color: transparent;
+   background-image: none;
+   border: 0px #000000 solid;
+   padding: 0;
+   margin: 0;
+   text-align: left;
 }
 #wb_Text2 div
 {
